--- a/src/components/CoreConcepts/CoreConcept.css
+++ b/src/components/CoreConcepts/CoreConcept.css
@@ -5,7 +5,7 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
   }
   
-  section h2 {
+  main h2 {
     text-align: center;
     font-family: "Roboto Condensed", sans-serif;
     margin: 0 0 1.5rem 0;
